@@ -1,0 +1,7 @@
+from dataclasses import dataclass
+
+
+@dataclass
+class BrokerAttributes:
+    num_cpus: int
+    num_disks: int
