@@ -1,7 +1,10 @@
 import importlib.resources
 import json
+from collections import ChainMap
 
+from .broker import BrokerAttributes
 from .filter import Filter
+from .recommendation import Recommendation, recommendations
 
 IGNORED_CONFIGS = (
     "broker.id",
@@ -19,6 +22,7 @@ def load_defaults(kafka_version: str):
 
 
 def compute_config_overrides(config: dict, defaults: dict) -> list:
+    """Augment each non-default configuration tunable with its associated metadata"""
     overrides = []
     for config_name, config_value in config.items():
         config_default_value = defaults.get(config_name)
@@ -34,6 +38,7 @@ def compute_config_overrides(config: dict, defaults: dict) -> list:
 
 
 def explain_config(config: dict, defaults: dict) -> list:
+    """Augment each configuration tunable with its associated metadata"""
     explained_config = []
     for config_name, config_value in config.items():
         config_default_value = defaults.get(config_name, {})
@@ -55,3 +60,25 @@ def filter_config_values(filter_str: str, config: dict, defaults: dict) -> dict:
             matching_configs[config_name] = config.get(config_name)
 
     return explain_config(matching_configs, defaults)
+
+
+def recommend_config(
+    config: dict, defaults: dict, broker_attrs: BrokerAttributes
+) -> list[Recommendation]:
+    """Inspect the broker configuration and recommend some configuration tweaks"""
+    recos = []
+    defaults_kv = {
+        cfg_name: cfg_data["default"] for cfg_name, cfg_data in defaults.items()
+    }
+    broker_config = ChainMap(config, defaults_kv)
+    for recommendation in recommendations:
+        config_current_value = broker_config.get(recommendation.config)
+        config_recommended_value_rendered_formula = recommendation.formula.format(
+            **vars(broker_attrs)
+        )
+        config_recommended_value = eval(config_recommended_value_rendered_formula)
+        if not recommendation.operator(
+            int(config_current_value), config_recommended_value
+        ):
+            recos.append(recommendation)
+    return recos
