@@ -11,6 +11,9 @@ Here we write upgrading notes for brands. It's a team effort to make them as
 straightforward as possible.
 
 ### Added
+- `scripts/scrape_kafka_config.py` can now scrape all configuration pages in a single run via the `-k all` flag
+- `kafkacfg filter`: filters all configuration tunables and enrich the results with the tunable metadata and override
+- `kafkacfg recommends`: emit sourced recommendations for your kafka configuration based on broker attributes
 
 ### Changed
 
@@ -21,8 +24,7 @@ straightforward as possible.
 
 ### Added
 - `kafkacfg explain`: displays information about all configuration tunables in a kafka config file
-- `scripts/scrape_kafka_config.py` can now scrape all configuration pages in a single run via the `-k all` flag
-- `kafkacfg filter`: filters all configuration tunables and enrich the results with the tunable metadata and override
+
 ### Changed
 - The output of `kafkacfg overrides` is now a JSON array, to make it easily pipe-able to `jtbl`
 
